--- a/WebcamML/templates/home.html
+++ b/WebcamML/templates/home.html
@@ -44,6 +44,17 @@
       <h1 id="webpage-title">Webcam Adjustment Recommender</h1>
     </header>
 
+    <div class="about">
+      <h2>About</h2>
+      <p>In an increasingly digital era, webcams are becoming more necessary as online meetings are becoming the norm inside
+        of everyday life. This newfound webcam importance has highlighted an important issue those with visual impairments face.
+         Webcams are an entirely visually focused media and have no way of providing feedback besides visually.
+         We are here to accomadate that issue by providing auditory cues to center a users face in the webcam such as "move up",
+          "move down", "move left" and "move right". This will enable those who typically do not benefit from webcams to use them for things such as 
+        video calls with family, remote work, and any teleconferencing needs. </p>
+    </div>
+
+
     <section id="feedback-section">
       <div >
           <img src="{%  url 'webcam_feed' %}"
